Añadí título al footer y un texto.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         </section>
     </main>
     <footer class="pie-pagina">
+        <h3>Yo soy el footer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, doloribus iusto! Sit minima, saepe ex facilis consectetur non, voluptatem iusto in, corrupti dicta assumenda maiores quibusdam nemo eveniet voluptate quaerat?</p>
     </footer>
 </body>
 </html>
