--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <footer class="pie-pagina">
         <h3>Yo soy el footer</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, doloribus iusto! Sit minima, saepe ex facilis consectetur non, voluptatem iusto in, corrupti dicta assumenda maiores quibusdam nemo eveniet voluptate quaerat?</p>
+        <img src="" alt="aeifjnm">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum amet odio ipsum esse officiis natus omnis? Sit, voluptates beatae nam nihil dolorem libero veritatis soluta quia modi est cumque iusto.</p>
     </footer>
 </body>
 </html>
