Nuevo archivo js, article y clase en css

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Este es mi encabezado</h1>
         <div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>campo 1</li>
+                <li>campo 2</li>
+                <li>campo 3</li>
             </ul>
         </div>
     </header>
@@ -25,6 +25,9 @@
             <div class="articulo-2"></div>
         </section>
         <section class="section-2">
+            <article class="articulo">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque illum officiis odio pariatur reprehenderit omnis autem rerum corrupti, perspiciatis iusto libero suscipit doloremque itaque sed impedit atque laborum? Dignissimos, beatae?
+            </article>
         </section>
     </main>
     <footer class="pie-pagina">
@@ -35,10 +38,13 @@
 
         <p>Yo soy el nuevo cambio</p>
         <div>
-            
+
         </div>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum amet odio ipsum esse officiis natus omnis? Sit, voluptates beatae nam nihil dolorem libero veritatis soluta quia modi est cumque iusto.</p>
     </footer>
+
+
+    <script src="index.js"></script>
 </body>
 </html>
