dos listas a section1

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <main class="contenido">
         <section class="section-1">
             <div class="articulo-1"></div>
+            <li>holahola</li>
+            <li>holaholahehe</li>
             <div class="articulo-2"></div>
         </section>
         <section class="section-2">
