he añadido un texto y dos botones en el div articulo-2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <main class="contenido">
         <section class="section-1">
             <div class="articulo-1"></div>
-            <div class="articulo-2"></div>
+            <div class="articulo-2">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci expedita, consequuntur mollitia debitis libero vel. Deserunt, aut ab libero obcaecati distinctio illo ratione ipsa sint repellendus, voluptatum error aliquam ducimus.</p>
+                <button>Botón 1</button>   
+                <button>Botón 2</button>
+            </div>
         </section>
         <section class="section-2">
             <article class="articulo">
