he puesto un div con la clase textos y he puesto luegos dos textos

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         <img src="" alt="aeifjnm">
 
         <p>Yo soy el nuevo cambio</p>
-        <div>
-
+        <div class="textos">
+            <p>dedeedede</p>
+            <p>hola tios</p>
         </div>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum amet odio ipsum esse officiis natus omnis? Sit, voluptates beatae nam nihil dolorem libero veritatis soluta quia modi est cumque iusto.</p>
